WordPress Local PV PVC/5.mysql-deployment.yaml
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: mysql
  labels:
    app: mysql
    tier: database
spec:
  selector:
    matchLabels:
      app: mysql
      tier: database
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mysql
        tier: database
    spec:
      containers:
      - image: mysql:latest
        imagePullPolicy: Always
        name: mysql
        ports:
        - containerPort: 3306
          name: mysql
          protocol: TCP
#        volumeMounts:
#        - name: mysql-persistent-storage
#          mountPath: /var/lib/mysql
        volumeMounts:
          - mountPath: /var/lib/mysql
            name: mysql-persistent-storage
          - mountPath: /etc/mysql/my.cnf
            subPath: my.cnf
            name: my-cnf-config
      volumes:
      - name: mysql-persistent-storage
        persistentVolumeClaim:
          claimName: mysql-pv-claim
      - name: my-cnf-config
        configMap:
          name: my-cnf-config
---
apiVersion: v1
kind: Service
metadata:
  name: mysql
  labels:
    app: mysql
    tier: database
spec:
  ports:
  - port: 3306
  selector:
    app: mysql
    tier: database
  clusterIP: None
