WordPress Local PV PVC/9.wp-dp.yaml
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: wordpress-application
  labels:
    app: wordpress-application
    tier: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wordpress-application
      tier: frontend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: wordpress-application
        tier: frontend
    spec:
      containers:
      - name: wordpress-application
        image: wordpress:php8.0-fpm
        ports:
        - containerPort: 9000
          name: wordpress
          protocol: TCP
        volumeMounts:
          - mountPath: /var/www/html 
            name: wordpress-pv-volume
        lifecycle:
          postStart:
            exec:
              command: 
              - /bin/sh
              - -c 
              - |
                chown -R www-data:www-data /var/www/html
                chmod -R 775 /var/www/html
      - name: nginx
        image: nginx:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
          name: wp-nginx
          protocol: TCP
        volumeMounts:
          - mountPath: /var/www/html
            name: wordpress-pv-volume
          - mountPath: /etc/nginx/conf.d/default.conf
            subPath: default.conf
            name: nginx-config
      volumes:
      - name: wordpress-pv-volume
        persistentVolumeClaim:
          claimName: wordpress-pv-claim
      - name: nginx-config 
        configMap:
          name: nginx-config
---
apiVersion: v1
kind: Service
metadata:
  name: wordpress-app-service
spec:
  selector:
    app: wordpress-application
    tier: frontend
  ports:
    - protocol: TCP
      port: 80
  type: NodePort
