WordPress Local PV PVC/10.ingress-routeing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app: wordpress-route
  name: wordpress-ingress
  annotations:
spec:
  ingressClassName: nginx
  rules:
  - host: wp.bdmonowar.ga
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: wordpress-app-service
            port:
              number: 80
